--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 NODE_ENV=development
 FRONTEND_URL=http://localhost:3000
 SESSION_SECRET=super session secret
-HTTP_SERVER_DOMAIN=https://kanbas-node-server-app-2aqp.onrender.com
+HTTP_SERVER_DOMAIN=https://cafe-node-server-app.onrender.com
 DB_NAME=project
