--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 NODE_ENV=development
 FRONTEND_URL=https://main--kaleidoscopic-conkies-6c59ca.netlify.app
 SESSION_SECRET=super session secret
-HTTP_SERVER_DOMAIN=cafe-node-server-app.onrender.com/
+HTTP_SERVER_DOMAIN=cafe-node-server-06d2fe9af4a2.herokuapp.com
 DB_NAME=project
