--- a/.env
+++ b/.env
@@ -1,8 +1,6 @@
 NODE_ENV=development
-FRONTEND_URL=https://main--kaleidoscopic-conkies-6c59ca.netlify.app
+FRONTEND_URL= "http://localhost:3000"
 SESSION_SECRET=super session secret
 HTTP_SERVER_DOMAIN=https://cafe-node-server-06d2fe9af4a2.herokuapp.com
+DB_CONNECTION_STRING ="mongodb+srv://bnw:bnwkanbas@cluster0.baftd5r.mongodb.net/project?retryWrites=true&w=majorityappName=Cluster0"
 DB_NAME=project
-
-
-DB_CONNECTION_STRING = "mongodb+srv://bnw:bnwkanbas@cluster0.baftd5r.mongodb.net/?retryWrites=true&w=majorityappName=Cluster0" 
