--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ FRONTEND_URL=https://main--kaleidoscopic-conkies-6c59ca.netlify.app
 SESSION_SECRET=super session secret
 HTTP_SERVER_DOMAIN=cafe-node-server-06d2fe9af4a2.herokuapp.com
 DB_NAME=project
+
+DB_CONNECTION_STRING=mongodb+srv://bnw:bnwkanbas@cluster0.baftd5r.mongodb.net/%EF%BC%9FretryWrites=true&w=majority&appName=Cluster0
