--- a/.env
+++ b/.env
@@ -4,8 +4,7 @@ FRONTEND_URL= http://localhost:3000
 SESSION_SECRET=super session secret
 HTTP_SERVER_DOMAIN=http://localhost:4000
 # HTTP_SERVER_DOMAIN=https://cafe-node-server-06d2fe9af4a2.herokuapp.com
-# DB_CONNECTION_STRING ="mongodb+srv://ClusterJackie:Chinadoll1002@cluster0.tbphlen.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
-DB_CONNECTION_STRING ="mongodb+srv://bnw:bnwkanbas@cluster0.baftd5r.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+DB_CONNECTION_STRING ="mongodb+srv://ClusterJackie:Chinadoll1002@cluster0.tbphlen.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 DB_NAME="project"
 
 # NODE_ENV=development
