--- a/.env
+++ b/.env
@@ -1,11 +1,9 @@
 NODE_ENV=development
 FRONTEND_URL= http://localhost:3000
-# FRONTEND_URL=https://main--kaleidoscopic-conkies-6c59ca.netlify.app
 SESSION_SECRET=super session secret
 HTTP_SERVER_DOMAIN=http://localhost:4000
-# HTTP_SERVER_DOMAIN=https://cafe-node-server-06d2fe9af4a2.herokuapp.com
-DB_CONNECTION_STRING ="mongodb+srv://ClusterJackie:Chinadoll1002@cluster0.tbphlen.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
-DB_NAME="project"
+DB_CONNECTION_STRING =mongodb+srv://ClusterJackie:Chinadoll1002@cluster0.tbphlen.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+DB_NAME=project
 
 # NODE_ENV=development
 # SESSION_SECRET=super session secret
