remove http domain

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 NODE_ENV=development
-FRONTEND_URL= http://localhost:3000
+# FRONTEND_URL= http://localhost:3000
+FRONTEND_URL= https://main--sensational-biscotti-71a5da.netlify.app
 SESSION_SECRET=super session secret
 HTTP_SERVER_DOMAIN=http://localhost:4000
 # DB_CONNECTION_STRING =mongodb+srv://ClusterJackie:Chinadoll1002@cluster0.tbphlen.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
