--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@ NODE_ENV=development
 FRONTEND_URL= https://main--sensational-biscotti-71a5da.netlify.app
 SESSION_SECRET=super session secret
 # HTTP_SERVER_DOMAIN=https://breweries-rating-node-app.onrender.com
-# DB_CONNECTION_STRING =mongodb+srv://ClusterJackie:Chinadoll1002@cluster0.tbphlen.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-DB_CONNECTION_STRING = mongodb+srv://bnw:bnwkanbas@cluster0.baftd5r.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+DB_CONNECTION_STRING =mongodb+srv://ClusterJackie:Chinadoll1002@cluster0.tbphlen.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+# DB_CONNECTION_STRING = mongodb+srv://bnw:bnwkanbas@cluster0.baftd5r.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 DB_NAME=project
 
 # NODE_ENV=development
